# zarrd

./: .gitignore  LICENSE  README.md  pyproject.toml
zarrd/: __init__.py  __main__.py  cli.py  convert.py  core.py  ops.py
zarrd/gui/: app.py  array_table.py  bulk_panel.py  detail_view.py  dialogs.py  explorer.py  op_dialog.py  theme.py  tree_editor.py  tree_model.py
