[project]
name = "zarrd"
version = "0.1.0"
description = "Desktop and command line tool for inspecting, editing, and converting Zarr v2 and v3 stores"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jules Poirot" }]
keywords = ["zarr", "gui", "qt", "pyside6", "conversion", "netcdf"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: X11 Applications :: Qt",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "zarr>=3.0",
]

[project.urls]
Repository = "https://github.com/polymood/zarrd"

[project.scripts]
zarrd = "zarrd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zarrd"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = false
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["zarr.*", "numcodecs.*"]
ignore_missing_imports = true
